RESOLVED FIXED114623
[WinCairo] Compile fix.
https://bugs.webkit.org/show_bug.cgi?id=114623
Summary [WinCairo] Compile fix.
peavo
Reported 2013-04-15 06:48:34 PDT
The compilation of CookieJarCurl.cpp fails because the symbols WTF::parseDateFromNullTerminatedCharacters() and WTF::StringBuilder are undefined.
Attachments
Patch (1.12 KB, patch)
2013-04-15 06:53 PDT, peavo
no flags
peavo
Comment 1 2013-04-15 06:53:49 PDT
WebKit Commit Bot
Comment 2 2013-04-15 10:11:55 PDT
Comment on attachment 198122 [details] Patch Clearing flags on attachment: 198122 Committed r148447: <http://trac.webkit.org/changeset/148447>
WebKit Commit Bot
Comment 3 2013-04-15 10:11:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.