[WinCairo] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=114623

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-04-15
Reviewed by Brent Fulgham.

* platform/network/curl/CookieJarCurl.cpp: Added required header files.

Canonical link: https://commits.webkit.org/133009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148447 268f45cc-cd09-0410-ab3c-d52691b4dbfc